# GLADE-GTK-Examples

./: .gitignore  README.md
GladeProgramJava1/: build.gradle  settings.gradle
GladeProgramJava1/src/main/java/nz/nightwind/: gp1.java
GladeProgramP1/: CMakeLists.txt  GladePart1.glade  GladeProgramP1  README.md  main.c
GladeProgramP2/: CMakeLists.txt  GPP2_Demo_Template.glade  GPP2_Demo_Template.glade~  GladeProgramP2  gladeprogram.h  main.cpp
